--- a/front-end/mantenimiento.css
+++ b/front-end/mantenimiento.css
@@ -1,24 +1,58 @@
 html,
 body {
   height: 100%;
+  margin: 0;
 }
 
 body{
-    background: url("imagenes/color-morado-pastel.jpg");
-    background-image: fixed;
-    background-image: center;  
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+  background: url("imagenes/FondoMenuProf.jpg");
+  background-image: fixed;
+  background-image: center;  
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
     
   }
+
+  .titulo{
+    text-align: center;
+    display: block;
+    width: 100%;
+    background-color: #99A3A4;
+    opacity: 0.9;
+    -moz-opacity: 0.9;
+    filter: alpha(opacity=90);
+    -khtml-opacity: 0.9; 
+    position: relative;
+    top: -10px;
+    height: 60px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .titulo:hover{
+    background-color: #CACFD2;
+    opacity: 0.9;
+    -moz-opacity: 0.9;
+    filter: alpha(opacity=90);
+    -khtml-opacity: 0.9;
+  }
+
+  h1{ 
+    position: relative;
+    top: 30px;  
+    margin-top: 10px; 
+    color:#FDFEFE;
+    font-family: "Trebuchet MS";
+    font-size: 25px;
+    }
 
   h2{
     position: relative;
     bottom: 40px;
     font-size:2; 
-    color:white;
+    color:black;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 30px;
     padding-bottom: 25px;
@@ -28,7 +62,7 @@ h3{
     position: relative;
     bottom: 60px;
     font-size:2; 
-    color:white;
+    color:black;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 15px;
     padding-bottom: 15px;
@@ -44,18 +78,120 @@ h4{
     padding-bottom: 25px;
 }
 
+.check{
+  background-color: #99A3A4;
+  opacity: 0.9;
+  -moz-opacity: 0.9;
+  filter: alpha(opacity=90);
+  -khtml-opacity: 0.9;
+  border: 2px solid white;
+  position: relative;
+  top: 50px;
+  width: 50%;
+  height: 90px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.check:hover{
+  background-color: #CACFD2;
+    opacity: 0.9;
+    -moz-opacity: 0.9;
+    filter: alpha(opacity=90);
+    -khtml-opacity: 0.9;
+    border: 2px solid white;
+}
+
+p{position: relative;
+  top: -20px;
+  color:#FDFEFE;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+label{
+  color:#FDFEFE;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
+}
+
+input[type=checkbox],label{
+position: relative;
+top: -30px;
+}
+
+input[type=checkbox] + label {
+  /*display: block; */
+  margin: 0.2em;
+  cursor: pointer;
+  padding: 0.2em;
+}
+
+input[type=checkbox]{display: none;
+}
+
+input[type=checkbox] + label:before {
+  content: "\2714";
+  border: 0.1em solid #FDFEFE;
+  border-radius: 0.2em;
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  padding-left: 0.2em;
+  padding-bottom: 0.3em;
+  margin-right: 0.2em;
+  vertical-align: bottom;
+  color: transparent;
+  transition: .2s;
+}
+
+input[type=checkbox] + label:active:before {
+  transform: scale(0);
+}
+
+input[type=checkbox]:checked + label:before {
+  background-color: #3498DB;
+  border-color: #3498DB;
+  color: #fff;
+}
+
+input[type=checkbox]:disabled + label:before {
+  transform: scale(1);
+  border-color: #aaa;
+}
+
+input[type=checkbox]:checked:disabled + label:before {
+  transform: scale(1);
+  background-color: #bfb;
+  border-color: #bfb;
+}
+
 .contenedor{
-    background-color: #2F2252;
+  background-color: #99A3A4;
+  opacity: 0.9;
+  -moz-opacity: 0.9;
+  filter: alpha(opacity=90);
+  -khtml-opacity: 0.9;
     border: 2px solid white;
     margin: auto;
     position: relative;
-    top: 50px;
+    top: 70px;
     width: 50%;
     z-index: 999;
     padding: 5px;
     box-sizing:border-box;
     height: 250px; 
     margin-top: 10px;
+}
+
+.contenedor:hover{
+  background-color: #CACFD2;
+    opacity: 0.9;
+    -moz-opacity: 0.9;
+    filter: alpha(opacity=90);
+    -khtml-opacity: 0.9;
+    border: 2px solid white;
 }
 
 .contenedor1{
@@ -137,7 +273,7 @@ h4{
     font-style: italic;
     font-family: helvetica;  
     position:relative;
-    border-radius: 12px;
+    border-radius: 2px;
     font-weight: bold;
     }
 
@@ -160,7 +296,7 @@ h4{
     padding: 5px;
     margin-top: 30px;
     position:relative;
-    border-radius: 12px; 
+    border-radius: 2px; 
     font-weight: bold;
   }
   
@@ -171,9 +307,30 @@ h4{
     cursor: pointer;    
   }
 
-  @media (max-width:1000px){
+  @media (max-width:960px){
     .contenedor{
-    width: 80%;
+    width: 70%;
         }
+    .check{
+      width: 70%;
     }
+    .contenedor3{
+      width: 70%;
+    }
+    }
+
+@media (max-width:500px){
+  .contenedor{
+  width: 80%;
+  }
+  .check{
+  width: 80%;
+  }
+  .contenedor3{
+  width: 80%;
+  }
+  .titulo{
+    width: 100%;
+  }
+} 
 
