--- a/front-end/jugar_nivel2.css
+++ b/front-end/jugar_nivel2.css
@@ -51,7 +51,7 @@ label{
 }
 
 .contenedor{
-    background-color: #CACFD2;
+    background-color: #474d51;
     opacity: 0.9;
     -moz-opacity: 0.9;
     filter: alpha(opacity=90);
