--- a/front-end/Vista.css
+++ b/front-end/Vista.css
@@ -5,8 +5,8 @@ body {
 
 h1{ 
   position: relative;
-  top: 60px;  
-  margin-top: 10px; 
+/*  top: 0px;  
+ margin-top: 10px; */
   color:#FDFEFE;
   font-family: "Trebuchet MS";
   font-size: 30px;
@@ -25,8 +25,7 @@ body{
 
 .contenedor{
   text-align: center;
-  position: relative;
-  top: 80px;   
+  position: relative; 
   z-index: 999;  
   width: 40%;
   height: 320px;
@@ -44,8 +43,7 @@ body{
   font-family: helvetica;
   width: 60%;
   height: 40px;
-  padding: 5px;
-  margin-top: 30px;
+  margin-top: 15px;
   position:relative;
   border-radius: 12px;
   overflow: hidden; 
