--- a/front-end/jugar_nivel1.css
+++ b/front-end/jugar_nivel1.css
@@ -51,6 +51,7 @@ label{
 }
 
 .contenedor{
+    background-color: rgba(54, 50, 50, 0.486);
     border-radius: 6px; 
     position: relative;
     text-align: center;
